# AI-video-assistant

./: .gitignore  README.md  app.py  main.py  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: extractor.py  rag_engine.py  summarize.py  transcriber.py  vector_store.py
utils/: audio_processor.py
