[project]
name = "video-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "deep-translator>=1.11.4",
    "ffmpeg-python>=0.2.0",
    "fpdf2>=2.7.9",
    "langchain-groq>=1.1.2",
    "huggingface-hub>=0.23.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-mistralai>=0.1.0",
    "langdetect>=1.0.9",
    "mistralai>=0.4.0",
    "numpy>=1.26.0",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.0",
    "streamlit>=1.35.0",
    "streamlit-extras>=0.4.2",
    "tenacity>=8.2.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
    "yt-dlp>=2024.3.10",
    "langchain-chroma>=0.1.0",
    "jsonpointer>=3.1.1",
    "langchain-core>=1.4.1",
    "groq>=0.9.0",
    "langchain-text-splitters>=0.2.0",
    "fastembed>=0.2.0",
]
